--- a/DockerFile
+++ b/DockerFile
@@ -1,25 +1,30 @@
-# Use lightweight base image
-FROM python:3.12-slim
+# Base image
+FROM python:3.10-slim
 
-# Set working directory
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Create working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y gcc g++ build-essential unixodbc-dev
-
-# Copy requirements and install
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all project code
+# Copy application files
 COPY . .
-
-# Set environment variables
-ENV STREAMLIT_SERVER_PORT=8501
-ENV STREAMLIT_SERVER_ENABLECORS=false
 
 # Expose Streamlit default port
 EXPOSE 8501
 
-# Default command to run app
+# Set PYTHONPATH
+ENV PYTHONPATH=/app
+
+# Streamlit specific environment variables (avoid opening browser, set host)
+ENV STREAMLIT_SERVER_HEADLESS=true
+ENV STREAMLIT_SERVER_PORT=8501
+ENV STREAMLIT_SERVER_ADDRESS=0.0.0.0
+
+# Command to run the app
 CMD ["streamlit", "run", "app/streamlit_app.py"]
