Add helpful .env_template

--- a/.env_template
+++ b/.env_template
@@ -1,21 +1,20 @@
 # .env
-CONNECTION_MODE=''
+CONNECTION_MODE='MANUAL'
 DATABASE_DSN=''
-DATABASE_DRIVER=''
-DATABASE_SERVER=''
-DATABASE_NAME=''
-DATABASE_USER=''
-DATABASE_PASSWORD=''
+DATABASE_DRIVER='{ODBC Driver 17 for SQL Server}'
+DATABASE_SERVER='localhost'
+DATABASE_NAME='WideWorldImporters'
+DATABASE_USER='sa'
+DATABASE_PASSWORD='password'
 DATABASE_PORT='1433'
 
-
-# Google Search Tool
-GOOGLE_API_KEY=
-GOOGLE_CSE_ID=
+# Google Search Tool -- future feature.
+GOOGLE_API_KEY=''
+GOOGLE_CSE_ID=''
 
 # Openai python module variables
 OPENAI_API_BASE='http://localhost:11434/v1'
 OPENAI_API_KEY='ollama'
 
 # Local LLM (via Ollama) configuration
-LLM_MODEL=''
+LLM_MODEL='qwen2.5-coder:7b'
