Update readme, env_template, add docker network, add ollama_host environment variable,

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,9 @@ services:
     volumes:
       - .:/app
     restart: unless-stopped
+    networks:
+      - appnet
+
+networks:
+  appnet:
+    external: true
