--- a/.env_template_docker
+++ b/.env_template_docker
@@ -2,7 +2,7 @@
 CONNECTION_MODE='MANUAL'
 DATABASE_DSN=''
 DATABASE_DRIVER='{ODBC Driver 17 for SQL Server}'
-DATABASE_SERVER='localhost'
+DATABASE_SERVER='SQL1'
 DATABASE_NAME='WideWorldImporters'
 DATABASE_USER='sa'
 DATABASE_PASSWORD='your_password_here'
@@ -13,7 +13,7 @@ GOOGLE_API_KEY=''
 GOOGLE_CSE_ID=''
 
 # Openai python module variables
-OPENAI_API_BASE='http://localhost:11434/v1'
+OPENAI_API_BASE='http://host.docker.internal:11434/v1'
 OPENAI_API_KEY='ollama'
 
 # Local LLM (via Ollama) configuration
